   - BaseSpeedOverride
   - ExtraLinearSpeed
   - MinimumFinalSpeed
   - MaximumFinalSpeed
* Feature: Add a random positive modifier to rewarded items.
* Feature: Enable partial module translation (support for English and Japanese language).
* Improvement: Spawned parties' now use the game's speed model and are therefore affected by all speed modifiers (forest, night, prisoners...)
* Improvement (Reward API): If the chance value is not set, then the item drop is guaranteed.
* Fix: The rewards now work as intended.
* Fix: The nearest settlement name is now correctly displayed in the party death message.
* Fix: Addressed Bannerlord.Harmony dependency warning on startup. No warnings should be displayed anymore.
---------------------------------------------------------------------------------------------------
Version: 1.9.6
Game Versions: v1.1.0,v1.1.1,v1.1.2,v1.1.3,v1.1.4,v1.1.5,v1.1.6
* Bump Bannerlord target version to v1.1.6.
---------------------------------------------------------------------------------------------------
Version: 1.9.5
Game Versions: v1.1.0,v1.1.1,v1.1.2
* Support for PC Xbox Game Pass.
* Fixed a crash at campaign launch (Could not load type 'MonoMod.Utils.Extensions' from assembly 0Harmony) when the installed dotnet is not .NET Framework 4.7.2+.
* API: Fixed the usage of [spawnPlace] and [deathPlace] in the SpawnMessage displaying the wrong location after the first spawn.
* Fixed safe passage price for spawned parties starting differently than "cs_". (same price as lord safe passage price divided by 8)
* Fixed a crash at campaign launch "Access to the path '../../../../Modules/CustomSpawns/Logs' is denied."
---------------------------------------------------------------------------------------------------
Version: 1.9.4
Game Versions: v1.1.0,v1.1.1,v1.1.2
* Updated to support Bannerlord v1.1.0
---------------------------------------------------------------------------------------------------
Version: 1.9.3
Game Versions: v1.0.0,v1.0.1